little update for my other project that is linked to this one by front end
